updated styles and hover effects

--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
           </div>
           <br>
           <!-- Bellevue University Card -->
-          <div class="card card-dark" style="width: 20rem;">
-            <a href="https://www.parchment.com/u/award/7eeff71f6b103e7ee4b0b96f95dd72f2">
+          <div id="bu-card" class="card card-dark" style="width: 20rem;">
+            <a href="https://www.parchment.com/u/award/7eeff71f6b103e7ee4b0b96f95dd72f2" target="_blank">
               <div class="card-body">
                 <h5 class="card-title">Bellevue University</h5>
                 <p class="card-text">Bellevue, NE</p>
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item card-dark">Graduated: January 2022</li>
-                  <li class="list-group-item card-dark">Bachelor of Science<br />Web Development</li>
+                <li class="list-group-item card-dark">Bachelor of Science<br />Web Development</li>
               </ul>
             </a>
           </div>
