--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <span id="toggle-btn" class="badge badge-dark toggle-colors">Change Color Scheme</span>
     <div id="cli" class="container p-5 toggle-colors">
       <h1>markwatsonjr@portfolio ~ % <span id="intro"></span><span class="type-block"><</span></h1>
-      <h1 id="type2" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="title"></span><span class="type-block"><</span></h1>
-      <h1 id="type3" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="open-this"></span><span class="type-block"><</span></h1>
+      <h1 id="line-2" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="title"></span><span class="type-block"><</span></h1>
+      <h1 id="line-3" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="open-about"></span><span class="type-block"><</span></h1>
       <h1 id="loading" class="hide pt-2">Loading<span id="load"></span></h1>
     </div>
     <span id="view-work">view my work</span>
